--- a/tbf_website/index.html
+++ b/tbf_website/index.html
@@ -7,27 +7,27 @@
     <!-- Primary Meta Tags -->
     <title>The Brijwasi Foundation - Making Lives Better Through Acts of Kindness</title>
     <meta name="title" content="The Brijwasi Foundation - Making Lives Better Through Acts of Kindness">
-    <meta name="description" content="Join The Brijwasi Foundation in our mission to create positive change through food distribution, education support, and community development programs in Mumbai.">
+    <meta name="description" content="Join The Brijwasi Foundation in our mission to create positive change through food distribution, education support, and community development programs in Delhi and Mumbai.">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://brijwasifoundation.org/">
+    <meta property="og:url" content="https://brijwasifoundation.in/">
     <meta property="og:title" content="The Brijwasi Foundation - Making Lives Better Through Acts of Kindness">
-    <meta property="og:description" content="Join The Brijwasi Foundation in our mission to create positive change through food distribution, education support, and community development programs in Mumbai.">
+    <meta property="og:description" content="Join The Brijwasi Foundation in our mission to create positive change through food distribution, education support, and community development programs in Delhi and Mumbai.">
     <meta property="og:image" content="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?auto=format&fit=crop&w=1200&h=630">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://brijwasifoundation.org/">
+    <meta property="twitter:url" content="https://brijwasifoundation.in/">
     <meta property="twitter:title" content="The Brijwasi Foundation - Making Lives Better Through Acts of Kindness">
-    <meta property="twitter:description" content="Join The Brijwasi Foundation in our mission to create positive change through food distribution, education support, and community development programs in Mumbai.">
+    <meta property="twitter:description" content="Join The Brijwasi Foundation in our mission to create positive change through food distribution, education support, and community development programs in Delhi and Mumbai.">
     <meta property="twitter:image" content="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?auto=format&fit=crop&w=1200&h=600">
 
     <!-- Additional SEO Meta Tags -->
     <meta name="keywords" content="NGO, charity, food distribution, education support, community development, Mumbai, volunteer, donate">
     <meta name="author" content="The Brijwasi Foundation">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://brijwasifoundation.org/">
+    <link rel="canonical" href="https://brijwasifoundation.in/">
 
     <!-- Preconnect to external resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
